# python-skillbox

./: .gitignore  README.md  example-env.env  pyproject.toml
python_skillbox/data/: filter.py  footer.py
python_skillbox/model/: app.py
python_skillbox/model/pages/: authorization_page.py  main_page.py  playlists_page.py  timetable_page.py  webinars_page.py
python_skillbox/utils/: english_lang.py
tests/: conftest.py  test_skillbox.py
